--- a/style.css
+++ b/style.css
@@ -3,3 +3,43 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1{
+  text-align: center;
+}
+
+figure{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+nav{
+  text-align: center;
+}
+
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+
+figure figcaption{
+  font-size: medium;
+  text-align: center;
+}
+
+#featured-property p{
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+  text-align: center;
+}
+
+div{
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
